--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,5 +1,9 @@
 $primary-color:#7001FD;
 $text-color: #212121;
 $secondary-color: #1E2772;
+$third-color: #6505e2;
 $gray-bg: #EEEEEE;
+$gray-secondary-bg: #F1F3F6;
+$gray-third-bg: #bdbfc2;
 $alert-error: #FF5F5F;
+
