--- a/frontend/src/app/page/login/login.component.html
+++ b/frontend/src/app/page/login/login.component.html
@@ -2,6 +2,28 @@
   title="Entre na sua conta"
   primaryBtnText="Login"
   secondaryBtnText="Inscreva-se"
+  (submit)="submit()"
+  (navigate)="navigate()"
+  [disablePrimaryBtn]="!loginForm.valid"
 >
-  <form action=""></form>
+  <form [formGroup]="loginForm">
+    <app-primary-input
+      formControlName="email"
+      inputName="email"
+      type="email"
+      label="Email"
+      placeholder="email@email.com"
+    >
+      <i class="ph ph-envelope"></i>
+    </app-primary-input>
+    <app-primary-input
+      formControlName="password"
+      inputName="password"
+      type="password"
+      label="Senha"
+    >
+      <i class="ph ph-lock"></i>
+    </app-primary-input>
+    <span>Esqueceu sua senha?</span>
+  </form>
 </app-default-layout>
