--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,16 @@
-*{
+@use 'ngx-toastr/toastr';
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  font-optical-sizing: auto;
 }
 
 html,body {
   height: 100%;
 }
+
+
+
