--- a/frontend/src/app/components/default-layout/default-layout.component.html
+++ b/frontend/src/app/components/default-layout/default-layout.component.html
@@ -22,7 +22,7 @@
     </div>
   </section>
   <section class="main-section">
-    <h1>Olá, Seja Bem-vindo</h1>
-    <img src="assets/banner.svg" alt="imagem de bem-vindo" />
+    <h1>Olá, Seja Bem-vindo!</h1>
+    <img class="banner" src="assets/banner.svg" alt="imagem de bem-vindo" />
   </section>
 </main>
